Corrected shifty placeholder text

--- a/src/components/Tabs/styles/Tab.scss
+++ b/src/components/Tabs/styles/Tab.scss
@@ -36,6 +36,7 @@
   .tab-title-input {
     border: none;
     font-size: 18px;
+    text-align: center;
 
     &:focus {
       border: none;
@@ -66,16 +67,19 @@
     align-items: center;
     height: 150px;
     border: 3px dashed #1565c0;
+
     h3 {
       font-weight: 400;
       font-size: 24px;
       margin: 0;
     }
+
     p {
       font: 14px;
       margin-bottom: 0;
       font-weight: 500;
     }
+
     p:last-child {
       margin-top: 0;
       color: #1565c0;
